# lichess-stream

./: Dockerfile  README.md  cassandra-entrypoint.sh  connector-config.json  consumer.py  docker-compose.yaml  notes.txt  package-lock.json  producer.py  pyproject.toml
batch_process/: load_data.sh  mongodb_write.py  query_data.py  raw_data_transform.py
cassandra-configuration/: Dockerfile  cassandra-entrypoint.sh
chess-be/: Dockerfile  pyproject.toml  server.py
chess-fe/: Dockerfile  package-lock.json  package.json
chess-fe/src/: App.js  Board.js  Stats.js  Timer.js
consumer/: Dockerfile  consumer.py  db.py  model.py  proba.py  pyproject.toml
data/cass2/data/system/compaction_history-b4dbb7b4dc493fb5b3bfce6e434832ca/: md-13-big-CompressionInfo.db  md-13-big-Data.db  md-13-big-Digest.crc32  md-13-big-Filter.db  md-13-big-Index.db  md-13-big-Statistics.db  md-13-big-Summary.db  md-14-big-Data.db  md-14-big-Digest.crc32  md-14-big-Filter.db  md-14-big-Index.db  md-14-big-Statistics.db  md-14-big-Summary.db  md-15-big-Data.db  md-15-big-Filter.db  md-15-big-Index.db  md-15-big-Statistics.db  md-15-big-Summary.db  md-41-big-CompressionInfo.db  md-41-big-Data.db  md-41-big-Digest.crc32  md-41-big-Filter.db  md-41-big-Index.db  md-41-big-Statistics.db  md-41-big-Summary.db  md-42-big-CompressionInfo.db  md-42-big-Data.db  md-42-big-Digest.crc32  md-42-big-Filter.db  md-43-big-Data.db  (+9 more)
kafka-connect-configuration/: Dockerfile  connector-config.json  connector-entrypoint.sh
kafka-connect-configuration/config/: config.json  connector-entrypoint.sh
producer/: Dockerfile  producer.py  pyproject.toml
(+284 files in other folders)
